--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-RESTful==0.3.10
 Flask-Security-Too==5.1.2
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
+Flask-Bcrypt==1.0.1
 Jinja2==3.1.2
 SQLAlchemy==2.0.6
 Werkzeug==2.2.3
